--- a/src/input.css
+++ b/src/input.css
@@ -6,6 +6,7 @@
     input[type='number']::-webkit-outer-spin-button,
     input[type='number']::-webkit-inner-spin-button,
     input[type='number'] {
+        outline: none;
         -webkit-appearance: none;
         margin: 0;
         -moz-appearance: textfield !important;
